# pd3f-core

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  dehyphen_wrapper.html  doc_info.html  doc_output.html  docker-compose.yml  export.html  geometry.html  index.html  parsr_wrapper.html  pyproject.toml  string_utils.html  utils.html
.github/workflows/: publish_docs.yml
01/: Pipfile  defaultConfig.json  fix.py  run.py  start_parsr.sh
ddd/: __init__.py  dddConfig.json  dehyphen.py  dehyphen_wrapper.py  doc_info.py  doc_output.py  docinfo.py  element.py  export.py  geometry.py  output.py  parsr_wrapper.py  run.py  score.py  setup.py  utils.py
ddd/ddd/: __init__.py  dddConfig.json  dehyphen.py  element.py  export.py  output.py  parsr_wrapper.py  run.py  score.py  utils.py
ddd/ddd.egg-info/: PKG-INFO
development/: README.md
development/notebooks/: README.md
development/notebooks/00_goofing_around/: test2.py
development/notebooks/01_perplexity/: perplexity_as_metric.ipynb  text1.txt  text2.txt
development/notebooks/02_dehyphen/: Untitled.ipynb
development/notebooks/03_transformers_exp/: Pipfile  Untitled-Copy1.ipynb  Untitled.ipynb  text1.txt  text2.txt
development/notebooks/04_ulmfit_exp/: Pipfile
development/notebooks/05_new_tries/: Untitled1.ipynb  clean2.md  clean3.md  clean4.md  clean7.md  geo.ipynb  textsim.ipynb
development/notebooks/06_next_tries/: Untitled-Copy1.ipynb  Untitled-Copy2.ipynb  Untitled.ipynb
development/notebooks/07_pd3f_api/: Untitled.ipynb
development/notebooks/08_debugging/: fix_none_bug.ipynb  idx_page_bug-Copy1.ipynb  idx_page_bug.ipynb
development/notes/: 01_notes.md  02_notes.md  06_blogpost.md
docs/: 02_notes.md  03_notes.md  04_data.md  05_notes.md  post.md
experiments/: Pipfile  Untitled.ipynb
experiments/00_goofing_around/: test1.py  test3.py
experiments/01_perplexity/: perplexity_as_metric.ipynb
experiments/03_transformers_exp/: Pipfile  Untitled.ipynb
experiments/04_ulmfit_exp/: Untitled.ipynb
experiments/05_new_tries/: Untitled-Copy1.ipynb  Untitled.ipynb  clean10.md  clean5.md  clean6.md  clean71.md  clean8.md  clean9.md
experiments/06_next_tries/: Untitled-Copy1.ipynb  Untitled.ipynb
notes/: notes.md
pd3f/: __init__.py  dehyphen_wrapper.py  doc_info.py  doc_output.py  export.py  parsr_wrapper.py  string_utils.py  utils.py
pdddf/: doc_output.py  export.py  parsr_wrapper.py  pdddfConfig.json
scripts/: local_parsr.sh  locale_parsr.sh  remote_parsr.sh  start_parsr.sh
tests/: test_ddd.py  test_geometry.py  test_pdfs.py  test_utils.py
tests/test_data/00001/: 00001_112018_FU_Berlin_Richtlinie_2017_1371_fast_experimental.txt
tests/test_data/00004/: 00004_09212018_bstbk_Unwandlungsgesetz_fast_experimental.txt
tests/test_data/00020/: 00020_08112014_Stellungnahme_RAK_Koeln_RefE_Bekaempfung_Korruption_fast_experimental.txt
