[tool.poetry]
name = "ddd"
version = "0.1.0"
description = "Dehyphenation of broken text (mainly German), e.g., extracted from a PDF"
license = "GPL-3.0-only"
authors = ["Johannes Filter <hi@jfilter.de>"]
keywords = ['pdf', 'nlp', 'german', 'text-extraction']
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


[tool.poetry.dependencies]
python = "^3.8"
parsr-client = "^3.1"
joblib = "*"
dehyphen = "*"
clean-text = { version = "^0.1.1", extras = [ "gpl" ] }


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
