[tool.poetry]
name = "pdddf"
version = "0.0.0"
description = "Dehyphenation of broken text (mainly German), e.g., extracted from a PDF"
license = "GPL-3.0-only"
authors = ["Johannes Filter <hi@jfilter.de>"]
keywords = ['pdf', 'nlp', 'german', 'text-extraction']
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.8"
parsr-client = "3.1"
joblib = "*"
clean-text = { version = "*", extras = [ "gpl" ] }
tqdm = "*"
dehyphen = "^0.2.0"
textdistance = "*"
shapely = "*"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "*"
black = {version = "^19.10b0", allow-prereleases = true}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
