[tool.poetry]
name = "pd3f"
version = "0.3.0"
description = "Reconstruct the original continuous text from PDFs with language models"
license = "GPL-3.0-only"
authors = ["Johannes Filter <hi@jfilter.de>"]
repository = "https://github.com/pd3f/pd3f-core"
keywords = ["pdf", "nlp", "german", "text-extraction"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
parsr-client = "3.1"
joblib = "*"
clean-text = { version = "*", extras = [ "gpl" ] }
dehyphen = "^0.3.0"
textdistance = "*"
shapely = "*"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "*"
black = {version = "^19.10b0", allow-prereleases = true}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
